# remind

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md
.cargo/: config.toml
.githooks/: pre-commit
.sqlx/: query-031bbb6579a4c3938631c23b0edd0037c01c35a42fee92e80ecaace904a1db6a.json  query-217c0c19aa660c6aca56132c3adaf4d184a85a298fafcb34e82b9eefe4132c82.json  query-3285b7de4a57ae98fab9b3316eb318a0bcfe054147b13382d2b7a7a27f79c2ec.json  query-7a7c504f75b842c157a78b4138d4e7c45f4f1c8e00c6304fd49792ed94adca1e.json
.zed/: settings.json
